k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: eventplanner
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: eventplanner
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: eventplanner
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
